# hal-voice-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: container.yml
hal/: __init__.py  audio.py  config.py  home_assistant.py  llm.py  logging_config.py  main.py  state.py  stt.py  tts.py  wakeword.py
hal/lights/: __init__.py  base.py  gpio.py  null.py
models/openwakeword/: README.md  hey_hal.onnx
scripts/: list_audio_devices.py  test_audio_playback.py  test_audio_record.py  test_gpio_lights.py  test_ha_conversation.py  test_mic_level.py  test_wakeword.py
systemd/: hal-voice-assistant.service
tests/: test_audio.py  test_stt.py  test_tts.py  test_wakeword.py
